[tool.poetry]
name = "endermite"
version = "0.0.7"
description = "A high-level, expressive component system that turns Minecraft into a game engine"
authors = ["Valentin Berlier <berlier.v@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
beet = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.1"
isort = "^5.7.0"
rope = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
